resources/css/app.css
/* ... */
/* width */
::-webkit-scrollbar {
    width: 15px;
}

/* Track */
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey;
    background-color: #fff;
    border-radius: 4px;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #0369A1;
    border-radius: 4px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #0369A1;
}

.ridesharing_movement_section p {
    color: #fff !important;
}
/* .ridesharing_reliability_section p{
    font-size: 18px;

} */
#navbar {
    padding: 8px 0;
    transition: all 500ms ease-in-out;
}
.ridesharing_reliability_section ul {
    list-style: disc;
    padding-left: 16px;
    margin-top: 16px;
}
.ridesharing_reliability_section ul li {
    margin-bottom: 10px;
}
.ridesharing_reliability_section ul li::marker {
    color: #2563eb;
}
.ridesharing_driver_description_section p {
    margin-top: 8px;
    font-size: 16px;
    color: rgb(107 114 128);
}

.search_features .flex_col {
    flex-direction: column;
    align-items: start;
}

.text_center p {
    text-align: center;
}
.text_sm p {
    font-size: 14px;
}
.text_base p {
    font-size: 16px;
}
.Signup-bottom p {
    font-family: theme("fontFamily.FuturaMdCnBT") !important;
}

.content ul, .content ol{
    list-style: disc !important;
    padding-left: 40px !important;
    margin: unset !important;
}

.page-post_a_ride label {
    font-size: 24px;
}

